Implement UI with custom view and RecyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DuplicateDetector</string>
+    <string name="duplicate_number">%1$s duplicates</string>
 </resources>
